syntax = "proto3";

package doctor;

option go_package = "http2/srv/doctor/proto;doctorpb";

import "google/protobuf/timestamp.proto";
import "validator/validator.proto";

message TimePeriod {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message Schedule {
  repeated TimePeriod monday = 1;
  repeated TimePeriod tuesday = 2;
  repeated TimePeriod wednesday =3;
  repeated TimePeriod thursday = 4;
  repeated TimePeriod friday = 5;
  repeated TimePeriod saturday = 6;
  repeated TimePeriod sunday = 7;
}

message Doctor {
  string id = 1;
  string name = 2;
  string office = 3;
  Schedule schedule = 4;

  repeated string patient_ids = 5;
}

message Medicine {
  string id = 1;
  string name = 2;
  repeated string ingredients = 3;
  string additional_info = 4;
}

service DoctorService {
  rpc GetDoctor(GetDoctorRequest) returns (GetDoctorResponse);
  rpc CreateDoctor(CreateDoctorRequest) returns (CreateDoctorResponse);
  rpc AddPatient(AddPatientRequest) returns (AddPatientResponse);
  rpc Checkup(CheckupRequest) returns (CheckupResponse);
}

message AddPatientRequest {
  string patient_id = 1 [(validator.field) = {string_not_empty : true}];
}
message AddPatientResponse {
  Doctor doctor = 1;
}

message GetDoctorRequest {
  string id = 1 [(validator.field) = {string_not_empty : true}];
}
message GetDoctorResponse {
  Doctor doctor = 1;
}

message CreateDoctorRequest {
  string name = 1 [(validator.field) = {string_not_empty : true}];
  string office = 2 [(validator.field) = {string_not_empty : true}];
  Schedule schedule = 3 [(validator.field) = {msg_exists : true}];
}
message CreateDoctorResponse {
  Doctor doctor = 1;
}

message CheckupRequest {
  string patient_id = 1 [(validator.field) = {string_not_empty : true}];
  string doctor_id = 2 [(validator.field) = {string_not_empty : true}];
}
message CheckupResponse {}
